--- a/geog176A.rmd
+++ b/geog176A.rmd
@@ -4,7 +4,7 @@ title: "Projects"
 
 In the summer of 2020 I took a class GIS course based in R. I worte some code, and did some cool data science. Here is a collection of links! 
 
-## [Building a project website]()
+## [Building a project website](https://github.com/JiwonBaik96/jay.github.io)
 
 - In this assignment we built a static users site with Github Pages 
 - Includes a github repo for access to all the code.
