--- a/teaching.rmd
+++ b/teaching.rmd
@@ -1,12 +1,8 @@
----
-title: "Geo13_2021_Labs"
----
 
+# Geog13_2021 and GEOG 176A 2020
+#### instructor: Mike Johnson, TA: Jiwon Baik
 
-In the summer of 2021, I TAed for the class leading students to make the first project in the GIS programming class using R. Here is a collection of links!
-
-# [Geog13_2021](https://jiwonbaik96.github.io/index.html)
-
+- TAed for the class leading students to make the first project in the GIS programming class using R.
 - Students to be familiar with R and Rstudio: what the basic logic is, and how to use it.
 - create a brief personal website using R and Github, that everyone visits it online easily.
 - Make a good start on Geographic Information Science! 
@@ -66,17 +62,6 @@ Here is my highlight in the project:
 ---
 
 In the **lab06**, terrain analysis is managed by R coding. We chose Mission Creek's flood event in 2017 as object, estimating the number of buildings impacted. In the project, I completed the whole analysis from collecting data to the assessment of impacts.
-
-# [Flood Risk in Mission Creek: Past, Present, Future](https://jiwonbaik96.github.io/geog-13-labs/lab-06.html)
-
-- I use OSM data to collect building centroids and the stream linestring. 
-- with the whitebox, I create hillshade raster of Santa Barbara area and HAND raster for flooding cell values.
-- The correcting of elevation is important in the data, which will impact the precision of analysis.
-- In the final step, I overlay all raster layers into one, indicating the impacted buildings when the creek flooded.
-- I also create a gif for Mission Creek's flood inundation map library from 0 to 20 foot.
-
-Here is my highlight in the project:
-![](img/geo13-lab06highlight.png)
 
 
 
