--- a/teaching.rmd
+++ b/teaching.rmd
@@ -8,25 +8,6 @@ output:
     collapsed: false
 ---
 
-```{css, echo=FALSE}
-.spoiler {
-  visibility: hidden;
-}
-
-.spoiler::before {
-  visibility: visible;
-  content: "Spoiler alert! Hover me to see the answer."
-}
-
-.spoiler:hover {
-  visibility: visible;
-}
-
-.spoiler:hover::before {
-  display: none;
-}
-```
-
 
 
 ---
@@ -35,7 +16,7 @@ output:
 </center>
 
 ## Geog13 2021 and GEOG 176A 2020
-#### instructor: Mike Johnson 
+#### Instructor: Mike Johnson 
 #### TA: Jiwon Baik
 
 - TAed for the class leading students to make the first project in the GIS programming class using R.
@@ -45,29 +26,63 @@ output:
 
 ---
 
+## 1. COVID-19 Data Wrangling
+
+* [sourcecode](https://jiwonbaik96.github.io/geog-13-labs/lab-02.html){target="_blank"}
+
+
+<div class="warning" style='padding:0.5em; background-color:#DAF2D3; color:#478432'>
+<span>
+<p style='margin-top:1em; text-align:center'>
+<b>COVID-19 Data Wrangling</b></p>
+<p style='margin-left:1em;'>
+
 In the **lab02**, I worked with COVID-19 data in US, monitoring California's daily new cases, plotting 4 interesting states' changes of cases, and evaluating the pandemic trending on space and time. Here is the link of workflow.
 
-## COVID-19 Data Wrangling
+<br> 
 
-- I was familiar with Rstudio gradually from practices, for instance, analyzing raw data with packages and plotting, combination of raw data, and extracting the variables from raw data.
-- In the COVID-19 data wrangling, I started to realize the relationship among data. Data will be influenced by other variables, chronologically and spatially. 
-- The structure of the code is important too. Well-structured code is easier to debug and present.
+- Students got familiar with Rstudio gradually from practices, for instance, analyzing raw data with packages and plotting, combination of raw data, and extracting the variables from raw data.
+- Students used New York Times COVID-19 Data and USDA Population Data to analyze cases of the virus
+across U.S. counties, working primarily with daily new cases, total case counts, state rolling 7-day mean cases, and cases per capita.
+- Students wrote programmatic requests to enable the data to update with daily additions made to the url of supporting COVID-19 data.
+- Students mapped the migration of the weighted mean coordinate locations of COVID-19 cases through time, scaling the mean center points with nationwide cumulative cases in relation to the current case counts.
 
-Here is my highlight in the project:
-[![](img/geo13-lab02highlight.png)](https://jiwonbaik96.github.io/geog-13-labs/lab-02.html){target="_blank" title="click this image to open sourcecode"}
+</p>
+</span>
+</div>
+
+
+![](img/weightedmeancenter.png)]
 
 ---
 
+
+## 2. Distances and the Border Zone
+
+* [sourcecode](https://jiwonbaik96.github.io/geog-13-labs/lab-03.html){target="_blank"}
+
+<div class="warning" style='padding:0.5em; background-color:#DAF2D3; color:#478432'>
+<span>
+<p style='margin-top:1em; text-align:center'>
+<b>Distances and the Border Zone</b></p>
+<p style='margin-left:1em;'>
+
 In the **lab03**, I figured out the geographic relationship between US cities and borders of national, states, and near countries. Then I evaluated the 100-mile Border Zone described in [ACLU article](https://www.aclu.org/other/constitution-100-mile-border-zone){target="_blank"}.
 
-## Distances and the Border Zone
+<br>
 
-- I learned how to build sf objects from R packages and CSVs, using computer to program the projection which studied in the Geog w12.
-- In the project, I understand the calculation of distance between geographic objects, such as point, line string and area.
-- And I can plot clear map with distance data by ggplot.
+
+- Students worked with spatial (sf) objects and coordinate systems and converted from MULTIPOLYGON to MULTILINESTRING geometries, in order to visualize country and state borders.
+- Students wrote functions to hasten coding that involved repeated use of the same code.
+- Students learned to use gghighlight to show only the pertaining data in color and lty to create dashed boundaries.
+
+
+</p>
+</span>
+</div>
 
 Here is my highlight in the project:
-[![](img/geo13-lab03highlight.png)](https://jiwonbaik96.github.io/geog-13-labs/lab-03.html){target="_blank" title="click this image to open sourcecode"}
+![](img/10popborderzone.png)
 
 ---
 
@@ -75,12 +90,13 @@ In the **lab04**, I started to analyze the geographic points in the polygon, wit
 
 ## Tesselations, Point-in-Polygon
 
-- I understand how the tessellation works. Each tessellation has its own advantages and disadvantages, and different attributes. 
-- I analyze the dams data in the United States with the voronoi tessellation, defining the numbers of dam in each tiles. With the distribution of different types, I demonstrate the possible reasons of the distribution.
-- And the leaflet map also be drawn, showing in largest and high_hazard dam in each state with Mississippi River System.
+- Students created tessellated surfaces of US county centroids and grid coverages intersected to the boundaries of the contiguous United States.
+- Using data from the US Army Corp of Engineers' National Dam Inventory (NID), Students mapped the spatial distribution of dams in the tessellations, noting that tile size can be deceptive (see: [The Modifiable Areal Unit Problem (MAUP)](https://www.gislounge.com/modifiable-areal-unit-problem-gis/))
+- Students created point-in-polygon visualizations for dams of specific purposes, such as recreation and flood control.
+
 
 Here is my highlight in the project:
-[![](img/geo13-lab04highlight.png)](https://jiwonbaik96.github.io/geog-13-labs/lab-04.html){target="_blank" title="click this image to open sourcecode"}
+[![](img/Lab4FloodControl.png)](https://jiwonbaik96.github.io/geog-13-labs/lab-04.html){target="_blank" title="click this image to open sourcecode"}
 
 ---
 
@@ -93,7 +109,10 @@ In the **lab05**, we learned to use raster layers to analyze the continuous data
 - And I extracted a specific location captured by the drone from layers to define its value in the raster data.
 
 Here is my highlight in the project:
-[![](img/geo13-lab05highlight.png)](https://jiwonbaik96.github.io/geog-13-labs/lab-05.html){target="_blank" title="click this image to open sourcecode"}
+```{r echo=FALSE}
+knitr::include_graphics("img/mission-creek-fim.gif")
+```
+
 
 ---
 
