--- a/teaching.rmd
+++ b/teaching.rmd
@@ -28,7 +28,7 @@ output:
 
 ## 1. COVID-19 Data Wrangling
 
-* [sourcecode](https://jiwonbaik96.github.io/geog-13-labs/lab-02.html){target="_blank"}
+* [sourcecode](https://jiwonbaik96.github.io/geog-13-labs/docs/lab-02.html){target="_blank"}
 
 
 <div class="warning" style='padding:0.5em; background-color:#DAF2D3; color:#478432'>
@@ -37,7 +37,7 @@ output:
 <b>COVID-19 Data Wrangling</b></p>
 <p style='margin-left:1em;'>
 
-In the **lab02**, I worked with COVID-19 data in US, monitoring California's daily new cases, plotting 4 interesting states' changes of cases, and evaluating the pandemic trending on space and time. Here is the link of workflow.
+In the **lab02**, students worked with COVID-19 data in US, monitoring California's daily new cases, plotting 4 interesting states' changes of cases, and evaluating the pandemic trending on space and time. Here is the link of workflow.
 
 <br> 
 
@@ -51,15 +51,16 @@ across U.S. counties, working primarily with daily new cases, total case counts,
 </span>
 </div>
 
-
-![](img/weightedmeancenter.png)]
+<center>
+![](img/weightedmeancenter.png)
+</center>
 
 ---
 
 
 ## 2. Distances and the Border Zone
 
-* [sourcecode](https://jiwonbaik96.github.io/geog-13-labs/lab-03.html){target="_blank"}
+* [sourcecode](https://jiwonbaik96.github.io/geog-13-labs/docs/lab-03.html){target="_blank"}
 
 <div class="warning" style='padding:0.5em; background-color:#DAF2D3; color:#478432'>
 <span>
@@ -67,7 +68,7 @@ across U.S. counties, working primarily with daily new cases, total case counts,
 <b>Distances and the Border Zone</b></p>
 <p style='margin-left:1em;'>
 
-In the **lab03**, I figured out the geographic relationship between US cities and borders of national, states, and near countries. Then I evaluated the 100-mile Border Zone described in [ACLU article](https://www.aclu.org/other/constitution-100-mile-border-zone){target="_blank"}.
+In the **lab03**, students figured out the geographic relationship between US cities and borders of national, states, and near countries. Then students evaluated the 100-mile Border Zone described in [ACLU article](https://www.aclu.org/other/constitution-100-mile-border-zone){target="_blank"}.
 
 <br>
 
@@ -81,41 +82,109 @@ In the **lab03**, I figured out the geographic relationship between US cities an
 </span>
 </div>
 
-Here is my highlight in the project:
+<center>
 ![](img/10popborderzone.png)
+</center>
 
 ---
 
-In the **lab04**, I started to analyze the geographic points in the polygon, with the functions defined by myself. With the raw data of dams in the United States, I tried to find the relationship between the dam distribution and geographic information. 
 
-## Tesselations, Point-in-Polygon
+## 3. Tesselations, Point-in-Polygon
+
+
+* [sourcecode](https://jiwonbaik96.github.io/geog-13-labs/docs/lab-04.html){target="_blank"}
+
+<div class="warning" style='padding:0.5em; background-color:#DAF2D3; color:#478432'>
+<span>
+<p style='margin-top:1em; text-align:center'>
+<b>COVID-19 Data Wrangling</b></p>
+<p style='margin-left:1em;'>
+
+
+
+In the **lab04**, students started to analyze the geographic points in the polygon, with the functions defined by myself. With the raw data of dams in the United States, students tried to find the relationship between the dam distribution and geographic information. 
+
+
+<br>
 
 - Students created tessellated surfaces of US county centroids and grid coverages intersected to the boundaries of the contiguous United States.
-- Using data from the US Army Corp of Engineers' National Dam Inventory (NID), Students mapped the spatial distribution of dams in the tessellations, noting that tile size can be deceptive (see: [The Modifiable Areal Unit Problem (MAUP)](https://www.gislounge.com/modifiable-areal-unit-problem-gis/))
+- Using data from the US Army Corp of Engineers' National Dam Inventory (NID), students mapped the spatial distribution of dams in the tessellations, noting that tile size can be deceptive (see: [The Modifiable Areal Unit Problem (MAUP)](https://www.gislounge.com/modifiable-areal-unit-problem-gis/))
 - Students created point-in-polygon visualizations for dams of specific purposes, such as recreation and flood control.
 
 
-Here is my highlight in the project:
-[![](img/Lab4FloodControl.png)](https://jiwonbaik96.github.io/geog-13-labs/lab-04.html){target="_blank" title="click this image to open sourcecode"}
+
+</p>
+</span>
+</div>
+
+<center>
+![](img/Lab4FloodControl.png)
+</center>
+
 
 ---
 
-In the **lab05**, we learned to use raster layers to analyze the continuous data, a case of flooding in Palo, Iowa. We used the raster pacakge and raster data knowledge to create flood images using multiband Landsat Imagery, thresholding and classification methods.
 
-## Raster and Remote Sensing
 
-- First time I deal with the continuous data with raster data model, and map algebra to analyze elevation, precipitation, and climate.
-- In the case of Palo, I use kmean-rasters compared with Landsat band calculating the flooding cells shared by each layers. 
-- And I extracted a specific location captured by the drone from layers to define its value in the raster data.
+## 4. Raster and Remote Sensing
 
-Here is my highlight in the project:
+* [sourcecode](https://jiwonbaik96.github.io/geog-13-labs/docs/lab-05.html){target="_blank"}
+
+<div class="warning" style='padding:0.5em; background-color:#DAF2D3; color:#478432'>
+<span>
+<p style='margin-top:1em; text-align:center'>
+<b>COVID-19 Data Wrangling</b></p>
+<p style='margin-left:1em;'>
+
+
+
+In the **lab05**, students learned to use raster layers to analyze the continuous data, a case of flooding in Palo, Iowa. We used the raster pacakge and raster data knowledge to create flood images using multiband Landsat Imagery, thresholding and classification methods.
+
+<br>
+
+- First time students deal with the continuous data with raster data model, and map algebra to analyze elevation, precipitation, and climate.
+- In the case of Palo, students use kmean-rasters compared with Landsat band calculating the flooding cells shared by each layers. 
+- And students extracted a specific location captured by the drone from layers to define its value in the raster data.
+
+</p>
+</span>
+</div>
+
+<center>
+![](img/lab5highlight.png)
+</center>
+
+---
+
+
+
+
+## 5. Flood Risk in Mission Creek: Past, Present, Future
+
+<div class="warning" style='padding:0.5em; background-color:#DAF2D3; color:#478432'>
+<span>
+<p style='margin-top:1em; text-align:center'>
+<b>COVID-19 Data Wrangling</b></p>
+<p style='margin-left:1em;'>
+In the **lab06**, terrain analysis is managed by R coding. Students chose Mission Creek's flood event in 2017 as object, estimating the number of buildings impacted. In the project, students completed the whole analysis from collecting data to the assessment of impacts.
+
+
+<br>
+
+
+- Students use OSM data to collect building centroids and the stream linestring.
+- with the whitebox, students create hillshade raster of Santa Barbara area and HAND raster for flooding cell values.
+- The correcting of elevation is important in the data, which will impact the precision of analysis.
+- In the final step, students overlay all raster layers into one, indicating the impacted buildings when the creek flooded.
+- students also create a gif for Mission Creek’s flood inundation map library from 0 to 20 foot.
+
+
+</p>
+</span>
+</div>
+
+<center>
 ```{r echo=FALSE}
 knitr::include_graphics("img/mission-creek-fim.gif")
 ```
-
-
----
-
-In the **lab06**, terrain analysis is managed by R coding. We chose Mission Creek's flood event in 2017 as object, estimating the number of buildings impacted. In the project, I completed the whole analysis from collecting data to the assessment of impacts.
-
-
+</center>
