--- a/portfolio.rmd
+++ b/portfolio.rmd
@@ -8,27 +8,30 @@ output:
     collapsed: false
 ---
 
+<style type="text/css">
+.main-container {
+  max-width: 1800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
+
+
 ---
 
 ## Contents
 
 * 3D Map Features and Spatial Modeling
   - 1.1. 3d Acoustic Propagation Modeling (ongoing)
-  - 1.2. lab project: LIDAR
-
-<br>
+  - 1.2. lab project: Extracting indoor details from LIDAR
 
 * Javascript Map API and Web Building
   - 2.1. Location based Theater and Movie finder
-
-<br>
 
 * Python Visualization and Spatial Optimization
   - 3.1. Fire Evacuation Maps (ongoing)
   - 3.2. Interactive map of Pareto Optimal solutions
   - 3.3. Finding Optimal Locations of Street Lights in LA
-
-<br> 
 
 * Spatial Statistical Analysis
   - 4.1. GWR, Spatio-temporal Krigging, and Spline on Air Pollutants from Remote Sensed Data
@@ -72,6 +75,38 @@ This sentence has five words. Here are five more words. Five-word sentences are 
 ![model](img/sound/model.PNG)
 
 ![result](img/sound/result.PNG)
+
+</center>
+
+---
+
+
+### 1.2. Extracting Indoor Details from LIDAR pointcloud
+#### [Lab project]
+
+* [presentation](data/lidar.pdf)
+
+<div class="warning" style='padding:0.1em; background-color:#E9D8FD; color:#69337A'>
+<span>
+<p style='margin-top:1em; text-align:center'>
+<b>On the importance of sentence length</b></p>
+<p style='margin-left:1em;'>
+This sentence has five words. Here are five more words. Five-word sentences are fine. But several together bocome monotonous. Listen to what is happening. The writing is getting boring. The sound of it drones. It's like a stuck record. The ear demands some variety.<br><br>
+    Now listen. I vary the sentence length, and I create music. Music. The writing sings. It has a pleasent rhythm, a lilt, a harmony. I use short sentences. And I use sentences of medium length. And sometimes when I am certain the reader is rested, I will engage him with a sentence of considerable length, a sentence that burns with energy and builds with all the impetus of a crescendo, the roll of the drums, the crash of the cymbals -- sounds that say listen to this, it is important.
+</p>
+<p style='margin-bottom:1em; margin-right:1em; text-align:right; font-family:Georgia'> <b>- Gary Provost</b> <i>(100 Ways to Improve Your Writing, 1985)</i>
+</p></span>
+</div>
+
+
+
+<center>
+
+![3dmap](img/lidar/data.jpg)
+
+![model](img/lidar/segmentation.jpg)
+
+![result](img/lidar/3d.jpg)
 
 </center>
 
@@ -147,14 +182,11 @@ This sentence has five words. Here are five more words. Five-word sentences are 
 </p></span>
 </div>
 
-
-![nondominated](img/thesis/nondominated.png)]
-![solution algorithm](img/thesis/nondominated.png)]
-
+<center>
 ```{r, echo=FALSE}
-#htmltools::includeHTML("index.html")
+shiny::includeHTML("data/swain_solutions.html")
 ```
-
+</center>
 
 
 ---
@@ -224,6 +256,7 @@ This sentence has five words. Here are five more words. Five-word sentences are 
 ![result table](img/krigging/resulttable.png)
 ![ROOCV](img/krigging/ROOCV.png)
 
+---
 
 
 ### 4.2. 2016 Election data analysis
