--- a/portfolio.rmd
+++ b/portfolio.rmd
@@ -40,6 +40,7 @@ output:
 
 ### 1.1. 3d Acoustic Propagation Modeling
 
+#### [Ongoing]
 
 - [presentation](data/Sound_Propagation_Model.pdf)
 - [sourcecode](data/SoundPropagation.html) : The sourcecode relies on arcpy module. The ipynb file should be operated within ArcGIS Pro, as an inserted Notebook.
@@ -47,10 +48,11 @@ output:
 <div class="warning" style='padding:0.1em; background-color:#E9D8FD; color:#69337A'>
 <span>
 <p style='margin-top:1em; text-align:center'>
-<b>On the importance of sentence length</b></p>
+<b>3d Acoustic Propagation Modeling</b></p>
 <p style='margin-left:1em;'>
-This sentence has five words. Here are five more words. Five-word sentences are fine. But several together bocome monotonous. Listen to what is happening. The writing is getting boring. The sound of it drones. It's like a stuck record. The ear demands some variety.<br><br>
-    Now listen. I vary the sentence length, and I create music. Music. The writing sings. It has a pleasent rhythm, a lilt, a harmony. I use short sentences. And I use sentences of medium length. And sometimes when I am certain the reader is rested, I will engage him with a sentence of considerable length, a sentence that burns with energy and builds with all the impetus of a crescendo, the roll of the drums, the crash of the cymbals -- sounds that say listen to this, it is important.
+
+This project is to 
+
 </p>
 <p style='margin-bottom:1em; margin-right:1em; text-align:right; font-family:Georgia'> <b>- Gary Provost</b> <i>(100 Ways to Improve Your Writing, 1985)</i>
 </p></span>
@@ -130,6 +132,8 @@ This sentence has five words. Here are five more words. Five-word sentences are 
 
 
 ## 3. Python Visualization and Spatial Optimization
+
+#### [Ongoing]
 
 ---
 
