--- a/contact.rmd
+++ b/contact.rmd
@@ -27,7 +27,6 @@ email: jiwonbaik@ucsb.edu
 
 if you want to know personal me: 
 
-instagram: @miracle_jay0____0
-(https://www.instagram.com/miracle_jay0____0)
+instagram: [miracle_jay0____0](https://www.instagram.com/miracle_jay0____0)
 
 </center>
